--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
             <h1 class="video-project">Video Project</h1>
             <!-----preloader-->
             <div class="preloader">
-              <img src="./preloader.gif">
+              <img src="preloader.gif">
             </div>
             <header class="video-header">
               <video class="video-container" muted autoplay loop>
-                <source src="/video1.MP4" type="video/mp4">
+                <source src="video1.MP4" type="video/mp4">
               </video>
               <button class="switch-btn">
                 <span>Play</span>
