--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
             <header class="video-header">
               <video class="video-container" muted autoplay loop>
-                <source src="video1.MP4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
               </video>
               <button class="switch-btn">
                 <span>Play</span>
